2002-02-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* vernalization.C (output): Don't output if not required (need for
	checkpoints).

	* hydraulic_Cosby.C (check_alist): Don't complain if 'Theta_sat'
	is speciefied, it will be after a checkpoint.

2002-02-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.07 released.

2002-02-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* horizon.C (Implementation::hydraulic): Removed member.
	(DepolationsFactor): Take it as an argument.
	(ThermalConductivity): Update caller.
	(initialize): Update caller.

	* hydraulic_M_C.C (HydraulicM_CSyntax): Better range checking.
	* hydraulic_B_C.C (HydraulicB_CSyntax): Ditto.
	* hydraulic_mod_C.C (Hydraulic_mod_CSyntax): Ditto.

	* horizon.C (Horizon): Initialize 'hydraulic' before 'impl'.
	(~Horizon): Delete 'impl' and 'hydraulic'.

	* parser_file.C (load_list): Give error of 'directory' directive
	fails. 

2002-02-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* hydraulic.C (initialize): New virtual function.
	* horizon.C (Horizon): Call it.
	(silt, sand): New functions.
	(load_syntax): Gave SOM_C_per_N a default value (11 11).
	* hydraulic_Cosby.C: New model.
	* Makefile (MODELS): Added it.
	* horizon.C (load_syntax): Make it default.

2002-01-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.06 released.

2002-01-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* horizon.C (load_syntax): Added checks.
	* soil.C (load_syntax): Added checks.
	* geometry.C (add_layer): Added check.
	(load_syntax): Ditto.

	* lexer.h, lexer.C (Lexer::Position): New class member.
	* lexer.h, lexer.C (error): Use it.
	* parser_file.C (load_list, convert, get_number, error): Use it.


	* units.C, units.h: New utility.
	* Makefile (OTHER): Add it.
	* parser_file.C (check_dimention, convert): Use it.

2002-01-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 2.05 released.

2002-01-24  Per Abrahamsen  <abraham@dina.kvl.dk>

	* pedo_linear.C: New model.
	* Makefile (MODELS): Added it.
